# thereross-browser

./: LICENSE  README.md
trs-core/: README.md
trs-core/.github/workflows/: build-linux.yml
trs-core/config/: trs_branding.gni
trs-core/docs/: BUILD.md
trs-core/scripts/: brand.sh  build.sh  setup.sh  update.sh
trs-core/src/ai_engine/: ai_sidebar.cc
trs-core/src/browser/: trs_browser_main.cc
trs-core/src/shield/: ua_shield.cc
